// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
Array [
  <form
    action=""
  >
    <label
      htmlFor="Deepest note"
    >
      Deepest note : 
      <input
        onChange={[Function]}
        type="text"
        value="F1"
      />
    </label>
    <label
      htmlFor="Selected Chord"
    >
      Selected Chord : 
      <input
        onChange={[Function]}
        type="text"
        value="C3maj7"
      />
    </label>
  </form>,
  <main>
    <ol>
      <li>
        E4
      </li>
      <li>
        A3
      </li>
      <li>
        D3
      </li>
      <li>
        G2
      </li>
      <li>
        C2
      </li>
      <li>
        F1
      </li>
    </ol>
    <ol>
      <li>
        <ol>
          <li
            className=""
          >
            F4
            <div />
          </li>
          <li
            className=""
          >
            Gb4
            <div />
          </li>
          <li
            className=""
          >
            G4
            <div />
          </li>
          <li
            className=""
          >
            Ab4
            <div />
          </li>
          <li
            className=""
          >
            A4
            <div />
          </li>
          <li
            className=""
          >
            A#4
            <div />
          </li>
          <li
            className=""
          >
            B4
            <div />
          </li>
          <li
            className=""
          >
            C5
            <div />
          </li>
          <li
            className=""
          >
            Db5
            <div />
          </li>
          <li
            className=""
          >
            D5
            <div />
          </li>
          <li
            className=""
          >
            Eb5
            <div />
          </li>
          <li
            className=""
          >
            E5
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            A#3
            <div />
          </li>
          <li
            className="_7M"
          >
            B3
            <div>
              7M
            </div>
          </li>
          <li
            className=""
          >
            C4
            <div />
          </li>
          <li
            className=""
          >
            Db4
            <div />
          </li>
          <li
            className=""
          >
            D4
            <div />
          </li>
          <li
            className=""
          >
            D#4
            <div />
          </li>
          <li
            className=""
          >
            E4
            <div />
          </li>
          <li
            className=""
          >
            F4
            <div />
          </li>
          <li
            className=""
          >
            Gb4
            <div />
          </li>
          <li
            className=""
          >
            G4
            <div />
          </li>
          <li
            className=""
          >
            Ab4
            <div />
          </li>
          <li
            className=""
          >
            A4
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            D#3
            <div />
          </li>
          <li
            className="_3M"
          >
            E3
            <div>
              3M
            </div>
          </li>
          <li
            className=""
          >
            F3
            <div />
          </li>
          <li
            className=""
          >
            Gb3
            <div />
          </li>
          <li
            className="_5P"
          >
            G3
            <div>
              5P
            </div>
          </li>
          <li
            className=""
          >
            G#3
            <div />
          </li>
          <li
            className=""
          >
            A3
            <div />
          </li>
          <li
            className=""
          >
            A#3
            <div />
          </li>
          <li
            className="_7M"
          >
            B3
            <div>
              7M
            </div>
          </li>
          <li
            className=""
          >
            C4
            <div />
          </li>
          <li
            className=""
          >
            Db4
            <div />
          </li>
          <li
            className=""
          >
            D4
            <div />
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            G#2
            <div />
          </li>
          <li
            className=""
          >
            A2
            <div />
          </li>
          <li
            className=""
          >
            A#2
            <div />
          </li>
          <li
            className=""
          >
            B2
            <div />
          </li>
          <li
            className="_1P"
          >
            C3
            <div>
              1P
            </div>
          </li>
          <li
            className=""
          >
            C#3
            <div />
          </li>
          <li
            className=""
          >
            D3
            <div />
          </li>
          <li
            className=""
          >
            D#3
            <div />
          </li>
          <li
            className="_3M"
          >
            E3
            <div>
              3M
            </div>
          </li>
          <li
            className=""
          >
            F3
            <div />
          </li>
          <li
            className=""
          >
            Gb3
            <div />
          </li>
          <li
            className="_5P"
          >
            G3
            <div>
              5P
            </div>
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            C#2
            <div />
          </li>
          <li
            className=""
          >
            D2
            <div />
          </li>
          <li
            className=""
          >
            D#2
            <div />
          </li>
          <li
            className=""
          >
            E2
            <div />
          </li>
          <li
            className=""
          >
            F2
            <div />
          </li>
          <li
            className=""
          >
            F#2
            <div />
          </li>
          <li
            className=""
          >
            G2
            <div />
          </li>
          <li
            className=""
          >
            G#2
            <div />
          </li>
          <li
            className=""
          >
            A2
            <div />
          </li>
          <li
            className=""
          >
            A#2
            <div />
          </li>
          <li
            className=""
          >
            B2
            <div />
          </li>
          <li
            className="_1P"
          >
            C3
            <div>
              1P
            </div>
          </li>
        </ol>
      </li>
      <li>
        <ol>
          <li
            className=""
          >
            F#1
            <div />
          </li>
          <li
            className=""
          >
            G1
            <div />
          </li>
          <li
            className=""
          >
            G#1
            <div />
          </li>
          <li
            className=""
          >
            A1
            <div />
          </li>
          <li
            className=""
          >
            A#1
            <div />
          </li>
          <li
            className=""
          >
            B1
            <div />
          </li>
          <li
            className=""
          >
            C2
            <div />
          </li>
          <li
            className=""
          >
            C#2
            <div />
          </li>
          <li
            className=""
          >
            D2
            <div />
          </li>
          <li
            className=""
          >
            D#2
            <div />
          </li>
          <li
            className=""
          >
            E2
            <div />
          </li>
          <li
            className=""
          >
            F2
            <div />
          </li>
        </ol>
      </li>
    </ol>
  </main>,
]
`;

exports[`renders correctly 2`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,12 +7,15 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : "
`;

exports[`renders correctly 3`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,22 +7,28 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"C3maj7\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid chord
+       </span>
      </label>
    </form>,
    <main>
      <ol>
        <li>"
`;

exports[`renders correctly 4`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -7,21 +7,24 @@
      >
        Deepest note : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"F1\\"
+         value=\\"xVfGu\\"
        />
+       <span>
+         not a valid note
+       </span>
      </label>
      <label
        htmlFor=\\"Selected Chord\\"
      >
        Selected Chord : 
        <input
          onChange={[Function onChange]}
          type=\\"text\\"
-         value=\\"C3maj7\\"
+         value=\\"G3\\"
        />
      </label>
    </form>,
    <main>
      <ol>
@@ -128,15 +131,15 @@
            >
              A#3
              <div />
            </li>
            <li
-             className=\\"_7M\\"
+             className=\\"_3M\\"
            >
              B3
              <div>
-               7M
+               3M
              </div>
            </li>
            <li
              className=\\"\\"
            >
@@ -148,14 +151,16 @@
            >
              Db4
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_5P\\"
            >
              D4
-             <div />
+             <div>
+               5P
+             </div>
            </li>
            <li
              className=\\"\\"
            >
              D#4
@@ -206,16 +211,14 @@
            >
              D#3
              <div />
            </li>
            <li
-             className=\\"_3M\\"
+             className=\\"\\"
            >
              E3
-             <div>
-               3M
-             </div>
+             <div />
            </li>
            <li
              className=\\"\\"
            >
              F3
@@ -226,15 +229,15 @@
            >
              Gb3
              <div />
            </li>
            <li
-             className=\\"_5P\\"
+             className=\\"_1P\\"
            >
              G3
              <div>
-               5P
+               1P
              </div>
            </li>
            <li
              className=\\"\\"
            >
@@ -252,15 +255,15 @@
            >
              A#3
              <div />
            </li>
            <li
-             className=\\"_7M\\"
+             className=\\"_3M\\"
            >
              B3
              <div>
-               7M
+               3M
              </div>
            </li>
            <li
              className=\\"\\"
            >
@@ -272,14 +275,16 @@
            >
              Db4
              <div />
            </li>
            <li
-             className=\\"\\"
+             className=\\"_5P\\"
            >
              D4
-             <div />
+             <div>
+               5P
+             </div>
            </li>
          </ol>
        </li>
        <li>
          <ol>
@@ -306,16 +311,14 @@
            >
              B2
              <div />
            </li>
            <li
-             className=\\"_1P\\"
+             className=\\"\\"
            >
              C3
-             <div>
-               1P
-             </div>
+             <div />
            </li>
            <li
              className=\\"\\"
            >
              C#3
@@ -332,16 +335,14 @@
            >
              D#3
              <div />
            </li>
            <li
-             className=\\"_3M\\"
+             className=\\"\\"
            >
              E3
-             <div>
-               3M
-             </div>
+             <div />
            </li>
            <li
              className=\\"\\"
            >
              F3
@@ -352,15 +353,15 @@
            >
              Gb3
              <div />
            </li>
            <li
-             className=\\"_5P\\"
+             className=\\"_1P\\"
            >
              G3
              <div>
-               5P
+               1P
              </div>
            </li>
          </ol>
        </li>
        <li>
@@ -430,16 +431,14 @@
            >
              B2
              <div />
            </li>
            <li
-             className=\\"_1P\\"
+             className=\\"\\"
            >
              C3
-             <div>
-               1P
-             </div>
+             <div />
            </li>
          </ol>
        </li>
        <li>
          <ol>"
`;
